Fix for unequal photo columns on tablet portrait

--- a/assets/static/style.css
+++ b/assets/static/style.css
@@ -136,7 +136,7 @@ article .dek {
 
     .photos .gallery {
         flex-direction: column;
-        max-height: 200vmax;
+        max-height: 200vw;
     }
 
     .photos .gallery-item {
